<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <!-- General -->
    <string name="app_name">Icy Monitor</string>
    <string name="activity_title_picker">Edit…</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- Main -->
    <string name="fragment_temperatures">Temperatures</string>
    <string name="fragment_fans">Fans</string>
    <string name="fragment_voltages">Voltages</string>
    <string name="fragment_power">Power</string>
    <string name="fragment_clock">Clock</string>
    <string name="fragment_load">Load</string>
    <!-- Content descriptions -->
    <string name="content_desc_computericon">Computer icon</string>
    <string name="decorative_icon">Decorative icon</string>
    <!-- Color picker -->
    <string-array name="default_color_values">
        <item>Custom</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Orange</item>
    </string-array>
    <!-- Disk info -->
    <string name="drive">Drive</string>
    <string name="label">Label:</string>
    <string name="size">Size:</string>
    <string name="free">Free:</string>
    <string name="loading">Loading…</string>
    <!-- Processes -->
    <string name="used_memory">Used Memory:</string>
    <string name="total_memory">Total Memory:</string>
    <!-- Menu items -->
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_about">About</string>
    <string name="menu_keep_screen_on">Keep screen on</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_server">Add server</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_usage">Sort by usage</string>
    <string name="menu_github">Find me on Github</string>
    <string name="menu_contact">Contact me</string>
    <string name="menu_help">Help</string>
    <string name="menu_setup_notifications">Setup notifications</string>
    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="setting_refresh_rate">Graph refresh rate</string>
    <string-array name="setting_refresh_rate_array">
        <item>Every 5 seconds</item>
        <item>Every 3 seconds</item>
        <item>Every 2 seconds</item>
        <item>Every 1 seconds</item>
        <item>Every 0.5 seconds</item>
        <item>Every 0.25 seconds</item>
    </string-array>
    <string-array name="setting_refresh_rate_values">
        <item>5000</item>
        <item>3000</item>
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>250</item>
    </string-array>
    <string name="setting_line_width">Line width</string>
    <string-array name="setting_line_width_array">
        <item>1px</item>
        <item>2px</item>
        <item>3px</item>
        <item>4px</item>
    </string-array>
    <string-array name="setting_line_width_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="setting_grid_x">Show X grid lines</string>
    <string name="setting_grid_y">Show Y grid lines</string>
    <string name="setting_cat_graphs">Graphs</string>
    <!-- Delete list item dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Delete this computer?</string>
    <!-- Connection Activity -->
    <string name="empty_list">This looks empty.\nTry adding a computer using the + button.</string>
    <string name="error_could_not_connect">Could not connect to server! Make sure you are connected to the internet and
        that the server is working properly.
    </string>
    <string name="warn_update_server">An updated server version is available. It is recommended that you update soon.</string>
    <!-- Add new server activity -->
    <string-array name="type_spinner_values">
        <item>Desktop</item>
        <item>Laptop</item>
        <item>Server</item>
    </string-array>
    <string name="button_add">Add</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="connecting">Connecting…</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_could_not_reach_host">Could not reach host</string>
    <string name="error_outdated_server">Incompatible server version</string>
    <string name="error_invalid_response">Invalid response received</string>
    <string name="error_empty_name">Empty name</string>
    <string name="error_empty_port">Empty port</string>
    <string name="port">Port</string>
    <string name="help_text">Please visit http://sakisds.github.io/Icy-Monitor/ from your computer and follow the instructions on how to setup the server.</string>
</resources>