<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AddServerActivity"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/imageView_type"
        android:paddingTop="8dp"
        android:layout_below="@+id/editText_address"
        android:layout_alignParentLeft="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/content_desc_computericon"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:hint="@string/hint_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="22dp"
        android:layout_alignLeft="@+id/imageView_type"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_address"
        android:layout_below="@+id/editText_name"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_alignRight="@+id/editText_name"
        android:hint="@string/hint_address"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/spinner_type"
        android:layout_below="@+id/editText_address"
        android:entries="@array/type_spinner_values"
        android:layout_toRightOf="@+id/imageView_type"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/button_add"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/button_add"
        android:layout_alignTop="@+id/spinner_type"
        android:layout_alignRight="@+id/editText_address"
        android:layout_marginBottom="4dp"/>

</RelativeLayout>