<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp">


    <com.sakisds.icymonitor.views.HoloCircularProgressBar
        android:id="@+id/diskProgress"
        style="@style/CircularProgressBarThick"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/textView_disk_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/diskProgress"
        android:layout_alignLeft="@+id/diskProgress"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_drive_name"
        android:layout_alignTop="@+id/diskProgress"
        android:layout_toRightOf="@+id/diskProgress"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label"
        android:id="@+id/textView"
        android:layout_below="@+id/textView_drive_name"
        android:layout_alignLeft="@+id/textView_drive_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_label"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:paddingBottom="1dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/size"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:singleLine="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_size"
        android:paddingBottom="1dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/free"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_free"
        android:paddingBottom="1dp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView_size"/>

</RelativeLayout>